# DCC_Migrator

./: CMakeLists.txt  MANIFEST.in  setup.py  tox.ini
DCC_pyMigrator/: __init__.py  __main__.py  runner.py  setup.py
DCC_pyMigrator/ext/: __init__.py  metadata.py
DCC_pyMigrator/src/: CMakeLists.txt  boost_migrator_wrapper.cpp  exiv2_glue.cpp  glue.cpp  metadata.cpp  metadata.h  migrate.cpp  py_exiv2.cpp  py_gmagick.cpp  runner.cpp  runner.py
DCC_pyMigrator/tests/: test_metadata.py
cmake/: FindGraphicsMagick.cmake
src/: CMakeLists.txt
src/Exiv2Wrapper/: CMakeLists.txt  Exiv2Wrapper.h  ImageMetadata.cpp  ImageMetadata.h  boost_exiv2_wrapper.cpp  boost_migrator_wrapper.cpp  metadata.cpp  metadata.h  reader.cpp  reader.h
src/MagickWrapper/: CMakeLists.txt  convert.cpp  convert.h
tests/: CMakeLists.txt  test_exiv2_wrapper.cpp
